--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,26 +11,11 @@ on:
   push:
     branches:
       - "*"
-  # schedule:
-  #  - cron: '1 4 * * *'
-
 jobs:
-  asknancy:
-    name: Ask Nancy (check dependencies)
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Write go list
-        run: go list -json -m all > go.list
-      - name: Ask Nancy
-        uses: sonatype-nexus-community/nancy-github-action@v1.0.3
-        # continue-on-error: true
   test:
-    needs: [asknancy]
     strategy:
       matrix:
-        go-version: [1.16.x, 1.17.x]
+        go-version: [1.20.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
